Fix some problems with header's z-index, search.html styles' and upload the first assignment

--- a/Practica1/css/styles.css
+++ b/Practica1/css/styles.css
@@ -23,6 +23,7 @@ body, html{
 	justify-content: space-between; /* Horizontal alingment */
 	align-items: flex-end; /* Vertical aligment */
 	width: 100%;
+	z-index: 666;
 }
 
 	/* CDdede */
@@ -333,11 +334,11 @@ h3{
 }
 
 	.result_item{
-		width: 100%;
 		display: flex;
 		justify-content: flex-start;
 		margin: 12px;
 		margin-bottom: 14px;
+		padding-right: : 14px;
 		background-color: white;
 		box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.05), 0 2px 2px 0 rgba(0, 0, 0, 0.05);
 		transition: all 400ms cubic-bezier(0.165, 0.840, 0.440, 1.000);
@@ -360,10 +361,13 @@ h3{
 			color: rgb(64, 89, 173);
 			font-size: 14pt;
 			font-weight: 400;
-			width: 100%;
+			padding-top: 4px;
+			padding-right: 12px;
 		}
 
 		.result_item_text{
 			color: black;
-			width: 100%;
+			margin-bottom: 12px;
+			margin-right: 18px;
+			text-align: justify;
 		}
